# gnucashcog-v3

./: CMakeLists.txt  COGNITIVE_ACCOUNTING.md  ChangeLog.2025  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_REPORT.md  ITERATION2_COMPLETION_STATUS.md  KO6ML_API_DOCUMENTATION.md  Makefile.phase4  NEWS  PHASE4_API_DOCUMENTATION.md  PHASE4_IMPLEMENTATION_SUMMARY.md  PHASE5_FINAL_SUMMARY.md  PHASE5_IMPLEMENTATION.md  PHASE6_IMPLEMENTATION.md  README.md  TENSOR_NETWORK_ARCHITECTURE.md  TEST_COVERAGE_SUMMARY.md  build-phase3.sh  cognitive-accounting-demo.cpp  final-cognitive-system-demonstration.sh  ko6ml-phase1-demo.cpp  meta-cognitive-demo.cpp  minimal-tensor-demo  minimal-tensor-demo.cpp  neural-symbolic-synthesis-demo.cpp  phase1-cognitive-primitives-demo.cpp  phase4-api-demo.cpp  phase6-comprehensive-demo.cpp  standalone-neural-symbolic-demo  standalone-neural-symbolic-demo.cpp  tensor-network-demo.cpp  test-cognitive-accounting.sh  test-ko6ml-phase1.sh  test-meta-cognitive-phase5.sh  test-phase1-cognitive-primitives.sh  test-phase6-comprehensive.sh
.github/agents/: 12_STEP_COGNITIVE_LOOP_DETAILED.md  4E Cognition Analysis of Frappe Framework.md  5-fold Pattern Language.md  AGI-OS Integration Summary.md  Axis Mundi Analysis from Mythopedia Resources.md  COGNITIVE_SYNERGY_ENGINE.md  Complete_Gizmo_Classification_FINAL.md  Configuring OrgSpace for AI Agent Generation Acros.md  Cross-Reference_ Axis Mundi Patterns and Pattern Language Framework.md  DTE-Persona-Purpose-Projects.md  Data Schema Mapping_ GnuCash to AtomSpace.md  Deep Tree Echo Hub with Pattern Language Integration.md  (+43 more)
bindings/: engine.i
gnucash/: gnucash.css
gnucash/html/: CMakeLists.txt  gnc-html-extras.h  gnc-html-factory.cpp  gnc-html-factory.hpp  gnc-html-history.cpp  gnc-html-history.h  gnc-html-webkit-p.hpp  gnc-html-webkit.hpp  gnc-html-webkit1.cpp  gnc-html-webkit1.hpp  gnc-html-webkit2.cpp  gnc-html-webkit2.hpp  gnc-html.cpp  gnc-html.h  gnc-html.i
po/: POTFILES.in  ar.po  as.po  az.po  bg.po  brx.po  ca.po  cs.po  da.po  de.po  doi.po  el.po  en_AU.po  en_GB.po  en_NZ.po  es.po  es_NI.po  et.po  eu.po  fa.po  fi.po  fr.po  gu.po  he.po  hi.po  hr.po  hu.po  id.po  it.po  ja.po  kn.po  ko.po  kok.po  kok@latin.po  ks.po  lt.po  lv.po  mai.po  mk.po  mni.po  (+22 more)
util/: extract-translators.pl
(+178 files in other folders)
